add: Update Prettier configuration to enforce uppercase SQL keywords

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,7 +8,8 @@
         "*.sql"
       ],
       "options": {
-        "parser": "postgresql"
+        "parser": "postgresql",
+        "sqlKeywordCase": "upper"
       }
     }
   ]
