fix: Update .prettierrc.json to streamline SQL file formatting options

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,9 +4,7 @@
   ],
   "overrides": [
     {
-      "files": [
-        "*.sql"
-      ],
+      "files": ["*.sql"],
       "options": {
         "parser": "postgresql",
         "sqlKeywordCase": "upper"
