--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
+# Node modules directory
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids/
+*.pid
+*.pid.lock
+
+# Dependency directories
+.DS_Store
+.env
+
+# Build files
+dist/
+build/
+
+# Editor or IDE-specific files
+.vscode/
+.idea/
+*.swp
 .vscode/settings.json
+
+# Miscellaneous
+*.lock
+
+
+
+
+
