--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project is a PostgreSQL database designed to handle core functionalities of a social media platform, including user-generated comments and hashtags, inspired by Instagram. The database structure supports efficient storage, retrieval, and analysis of data, incorporating key features like:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "node-pg-migrate"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "dependencies": {
     "node-pg-migrate": "^7.9.0",
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "dotenv-cli": "^8.0.0"
   }
 }
